[package]
name = "redis-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cache"
path = "src/cache/main.rs"

[[bin]]
name = "pubsub"
path = "src/pubsub/main.rs"

[[bin]]
name = "geo"
path = "src/geo/main.rs"

[[bin]]
name = "geo_radius"
path = "src/geo_radius/main.rs"

[[bin]]
name = "fibonacci_cache"
path = "src/fibonacci_cache/main.rs"

[dependencies]

[dependencies.redis]
version = "0.24.0"